footer changes added

--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -74,7 +74,7 @@
                         <img src="./../../images/cultural2.webp" alt="">
                         <div class="homepage-Card">
                             <h3>Pandit Tanmoy Bose honored with Sri Chinmoy Culture-Light Award</h3>
-                            <p>The biggest wedding of the year is just around the corner, and we can't keep calm and their wedding festivities have already begun, grabbing all the headlines.  From exquisite custom-made outfits to glamorous six yards, she has rocked every look to perfection</p>
+                            <p>Tanmoy Bose received the Sri Chinmoy Culture-Light Award at the Sri Chinmoy Aspiration-Ground for his dedication to music, which captivates audiences globally and enriches cultural landscapes. His efforts evoke sensitivity to the music's ancient spirit.</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
@@ -138,33 +138,29 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a>Tarun Tahiliani defends Olympic uniforms criticism..</a>
+                        <a>Tarun Tahiliani defends Olympic uniforms criticism.the design of the Indian contingent's uniforms for the 2024 Paris Olympics following widespread criticism.</a>
                         <hr>
-                        <a>Pandit Tanmoy Bose honored with Sri Chinmoy Culture-Light Award.</a>
+                        <a> Tanmoy Bose with Sri Chinmoy Culture-Light Award.at the Sri Chinmoy Aspiration-Ground for his dedication to music, which captivates audiences globally and enriches cultural landscapes.</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a> Nita Ambani stuns in a Kasavu sari on.Anant Ambani and Radhika Merchant are all set to tie the knot on July 12, and their wedding festivities.</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <br>
                     </div>
                     <button>Load More +</button>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Mughals Humayun Museum in Delhi Union Culture Minister Gajendra Singh Shekhawat officially opened the museum, which showcases over 500.</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a> on Ustad Amjad Ali Khan teaching and philosophy are
+                            beyond music.sons of sarod maestro Ustad Amjad Ali Khan, are known for their sarod duets.</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a> 11-yr-old Rock goddess who floored Americas Got Talent.
+                            Americas Got Talent.opened her routine with an intricate alaap in Natabhairavi a grand devotional raga.</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
-                    </div>
+                        <br>
+                </div>
                     <button>Load More +</button>
                 </div>
                 <div class="newsletter-section">
@@ -178,15 +174,12 @@
             </div>
         </div>
     </section>
+     <!-- ended card and sidebar sections -->
 
-
-
-
-
-
-</body>
-
+    </body>
 </html>
+    
+    
 
 
-</body>
+
