content added in card 4 page

--- a/pages/Education/card4.html
+++ b/pages/Education/card4.html
@@ -1,59 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
 </head>
-<body>
-        <!-- started here navbar -->
 
-        <header>
-            <nav>
-                <div class="top-navbar">
-                    <div>
-                        <h4>The</h4>
-                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
-                    </div>
-                    <div>
-                        <ul class="top-nav-list">
-                            <li><a href="./../../index.html">Home</a></li>|
-                            <li><a href="./../aboutusPage.html">About</a></li>|
-                            <li><a href="">Contact</a></li>|
-                            <li><a href="">Login</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="top-nav-icons">
-                            <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                    alt="facebook-icon" target="_blank"></a>
-                            <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                    alt="instagram-icon"></a>
-                            <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                    alt="telegram-icon"></a>
-                            <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                    alt="youtube-icon"></a>
-                        </div>
-                        <div class="top-nav-search-bar">
-                            <input type="text" placeholder="Search news" />
-                            <img src="./../../images/magnifying-glass.png" />
-                        </div>
-                    </div>
-                </div>
-    
+<body>
+    <!-- started here navbar -->
+
+    <header>
+        <nav>
+            <div class="top-navbar">
                 <div>
-                    <ul class="nav-list">
-                        <li><a href="">world news</a></li>
-                        <li><a href="">Sports</a></li>
-                        <li><a href="./../tech/tech.html">Tech</a></li>
-                        <li><a href="">Entertainment</a></li>
-                        <li><a href="">Business</a></li>
-                        <li><a href="">Culture</a></li>
-                        <li><a href="">Education</a></li>
+                    <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                </div>
+                <div>
+                    <ul class="top-nav-list">
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="">Contact</a></li>|
+                        <li><a href="">Login</a></li>
                     </ul>
                 </div>
-            </nav>
-        </header>
+                <div>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                    <div class="top-nav-search-bar">
+                        <input type="text" placeholder="Search news" />
+                        <img src="./../../images/magnifying-glass.png" />
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="education.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>PM Modi: Revive Nalanda's spirit to renew global knowledge traditions.</h1>
+    </div>
+    <div class="d-t">
+        Date : Fri , Aug 16
+    </div>
+    <br>
+    <div class="img_container">
+        <img src="./../../images/Nalanda-uni.avif" alt="nalanda-uni" class="front_img" />
+        <div class="information_block">
+            Prime Minister Narendra Modi on Thursday sought to revive the ancient Nalanda University spirit, positioning
+            India as a global education hub by promoting higher learning and research.
+            While addressing the nation from the ramparts of Red Fort on the occasion of Independence Day, PM Modi said
+            that under the new education policy, he wants to build institutions where people from abroad come to India.
+            "Recently we have rebuilt Nalanda University in Bihar. Nalanda University has started functioning once
+            again. But in the field of education, we will have to once again awaken that centuries-old Nalanda spirit,
+            we will have to live that Nalanda spirit, we will have to work with great faith in that Nalanda spirit to
+            give new consciousness to the traditions of knowledge of the world," he said.
+
+            "Under the new education policy, we want to develop such an education system in the country that the youth
+            of my country do not have to go abroad, middle-class families do not have to spend lakhs and crores of
+            rupees. We want to build such institutions here where people from abroad come to India," the Prime Minister
+            added.
+
+            The Prime Minister also urged the nation to work towards a developed nation to be achieved by 2047. He said
+            that 40 crore Indians showed strength and courage to drive away the British decades back.
+
+            "Before independence, 40 crore Indians showed courage, dedication and bravery and moved with one motto, and
+            broke the shackles of colonial rule despite all adversaries. Their only goal was freedom. If 40 crore
+            Indians could do this, then 140 CR Indians of my family can do wonders if they take one pledge then despite
+            all challenges we can make a Viksit Bharat by 2047," PM Modi said.
+        </div>
+    </div>
 </body>
+
 </html>
