--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="card">
                         <img src="../../images/cbsc.avif"
-                            alt="">
+                            alt="student">
                         <div class="homepage-Card">
                             <h3>CBSE elaborates guidelines for children with special needs</h3>
                             <p>CBSE in official notice to all the Heads and Managers of the schools affiliated with the Board, issued a set of guidelines for Children with Needs.</p>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="card">
                         <img src="../../images/modi.webp"
-                            alt="">
+                            alt="modi">
                         <div class="homepage-Card">
                             <h3>PM Modi: No need for youth to study abroad with new education system.</h3>
                             <p>PM Modi said his government wants to build such an education system in the country so that youngsters need not have to go abroad for studies.</p>
@@ -100,11 +100,11 @@
                     <div class="cards">
                         <div class="card">
                             <img src="../../images/Nalanda-uni.avif"
-                                alt="">
+                                alt="nalanda-uni">
                             <div class="homepage-Card">
                                 <h3>PM Modi: Revive Nalanda's spirit to renew global knowledge traditions.</h3>
                                 <p>PM Modi seeks to revive the spirit of ancient Nalanda University, aiming to make India a global hub for higher learning and research.</p>
-                                <a href="">Read more</a>
+                                <a href="card4.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
