content added in card5 page

--- a/pages/Education/card5.html
+++ b/pages/Education/card5.html
@@ -1,60 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
 </head>
-<body>
-        <!-- started here navbar -->
 
-        <header>
-            <nav>
-                <div class="top-navbar">
-                    <div>
-                        <h4>The</h4>
-                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
-                    </div>
-                    <div>
-                        <ul class="top-nav-list">
-                            <li><a href="./../../index.html">Home</a></li>|
-                            <li><a href="./../aboutusPage.html">About</a></li>|
-                            <li><a href="">Contact</a></li>|
-                            <li><a href="">Login</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="top-nav-icons">
-                            <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                    alt="facebook-icon" target="_blank"></a>
-                            <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                    alt="instagram-icon"></a>
-                            <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                    alt="telegram-icon"></a>
-                            <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                    alt="youtube-icon"></a>
-                        </div>
-                        <div class="top-nav-search-bar">
-                            <input type="text" placeholder="Search news" />
-                            <img src="./../../images/magnifying-glass.png" />
-                        </div>
-                    </div>
-                </div>
-    
+<body>
+    <!-- started here navbar -->
+
+    <header>
+        <nav>
+            <div class="top-navbar">
                 <div>
-                    <ul class="nav-list">
-                        <li><a href="">world news</a></li>
-                        <li><a href="">Sports</a></li>
-                        <li><a href="./../tech/tech.html">Tech</a></li>
-                        <li><a href="">Entertainment</a></li>
-                        <li><a href="">Business</a></li>
-                        <li><a href="">Culture</a></li>
-                        <li><a href="">Education</a></li>
+                    <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                </div>
+                <div>
+                    <ul class="top-nav-list">
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="">Contact</a></li>|
+                        <li><a href="">Login</a></li>
                     </ul>
                 </div>
-            </nav>
-        </header>
-        <!--Read More content started-->
+                <div>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                    <div class="top-nav-search-bar">
+                        <input type="text" placeholder="Search news" />
+                        <img src="./../../images/magnifying-glass.png" />
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="education.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>RBSE canceled the 2024 exams of 24 candidates for cheating.</h1>
+    </div>
+    <div class="d-t">
+        Date : Fri , Aug 16
+    </div>
+    <br>
+    <div class="img_container">
+        <img src="./../../images/rajasthan.avif" alt="ra" class="front_img" />
+        <div class="information_block">
+            Rajasthan Board of Secondary Education has cancelled the examinations of 24 candidates who appeared for the
+            Rajasthan Board exam 2024 for using unfair means.
+            The Board has taken strong action against these candidates who were held for cheating in the exam centre,
+            bringing copies of material to the exam centre and sending dummy candidates to appear for the examination.
+            Highlighting the details, the Board has released a press statement on Tuesday, August 13.
+
+            As per the press statement issued, out of the total number of candidates held, 14 were enrolled for the
+            Higher Secondary Examination 2024, and 10 candidates were enrolled for the Class 10 Board Examination 2024.
+
+            The examination of 5 candidates who were enrolled for the Class 12 examination was cancelled, 4 Class 12
+            candidates' examinations were cancelled, and they were debarred from appearing in the board exam to be held
+            in the year 2025. Another 5 Class 12th candidates' examination was cancelled, and they were debarred from
+            appearing in the board examination till the year 2026.
+            RBSE Class 12- Arts, Science and Commerce stream results were announced on May 20, 2024 and RBSE Class 10
+            results were announced on May 29, 2024. The overall pass percentage for the Arts stream was 96.88%, Science
+            was 97.73%, and Commerce was 98.95%. The overall pass percentage of Class 10 was 93.03%. For more details,
+            candidates can check the official RBSE website.
+
+
+ </div>
+    </div>
 </body>
+
 </html>
