--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -113,7 +113,7 @@
                             <div class="homepage-Card">
                                 <h3>RBSE canceled the 2024 exams of 24 candidates for cheating.</h3>
                                 <p> RBSE canceled the exams of 24 students for cheating.These students were found using unfair means, resulting in the cancellation of their results. </p>
-                                <a href="">Read more</a>
+                                <a href="card5.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
