--- a/pages/Education/card5.html
+++ b/pages/Education/card5.html
@@ -70,18 +70,19 @@
         <img src="./../../images/rajasthan.avif" alt="ra" class="front_img" />
         <div class="information_block">
             Rajasthan Board of Secondary Education has cancelled the examinations of 24 candidates who appeared for the
-            Rajasthan Board exam 2024 for using unfair means.
+            Rajasthan Board exam 2024 for using unfair means.<br>
             The Board has taken strong action against these candidates who were held for cheating in the exam centre,
             bringing copies of material to the exam centre and sending dummy candidates to appear for the examination.
             Highlighting the details, the Board has released a press statement on Tuesday, August 13.
-
+           <br>
             As per the press statement issued, out of the total number of candidates held, 14 were enrolled for the
             Higher Secondary Examination 2024, and 10 candidates were enrolled for the Class 10 Board Examination 2024.
-
+             <br>
             The examination of 5 candidates who were enrolled for the Class 12 examination was cancelled, 4 Class 12
             candidates' examinations were cancelled, and they were debarred from appearing in the board exam to be held
             in the year 2025. Another 5 Class 12th candidates' examination was cancelled, and they were debarred from
             appearing in the board examination till the year 2026.
+            <br>
             RBSE Class 12- Arts, Science and Commerce stream results were announced on May 20, 2024 and RBSE Class 10
             results were announced on May 29, 2024. The overall pass percentage for the Arts stream was 96.88%, Science
             was 97.73%, and Commerce was 98.95%. The overall pass percentage of Class 10 was 93.03%. For more details,
@@ -90,6 +91,68 @@
 
  </div>
     </div>
+    <!-- footer has been started from here -->
+
+    <footer>
+        <div class="footer-section">
+
+
+            <div class="footer-nav-links">
+                <h3>Subscribe to our Newsletter</h3>
+                <form>
+                    <input type="email" name="email" placeholder="Your email" required>
+                    <input type="text" name="name" placeholder="Your name" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+            <div class="footer-nav-links">
+                <h3>Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+            <div class="footer-nav-links">
+                <h3>Important Links</h3>
+                <ul>
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+            <div class="footer-nav-links">
+                <h3>Address</h3>
+                <ul>
+                    <li>4567 Shivaji Lane</li>
+                    <li>Chatrapati Nagar, Ward 12</li>
+                    <li>Nagpur, Maharashtra 440018
+                        India</li>
+                </ul>
+                <div class="footer-follow-us-Container">
+                    <h3>Follow Us</h3>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright-section">
+            <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
+        </div>
+    </footer>
 </body>
 
 </html>
