content added in caed6 page

--- a/pages/Education/card6.html
+++ b/pages/Education/card6.html
@@ -1,59 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
 </head>
-<body>
-        <!-- started here navbar -->
 
-        <header>
-            <nav>
-                <div class="top-navbar">
-                    <div>
-                        <h4>The</h4>
-                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
-                    </div>
-                    <div>
-                        <ul class="top-nav-list">
-                            <li><a href="./../../index.html">Home</a></li>|
-                            <li><a href="./../aboutusPage.html">About</a></li>|
-                            <li><a href="">Contact</a></li>|
-                            <li><a href="">Login</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="top-nav-icons">
-                            <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                    alt="facebook-icon" target="_blank"></a>
-                            <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                    alt="instagram-icon"></a>
-                            <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                    alt="telegram-icon"></a>
-                            <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                    alt="youtube-icon"></a>
-                        </div>
-                        <div class="top-nav-search-bar">
-                            <input type="text" placeholder="Search news" />
-                            <img src="./../../images/magnifying-glass.png" />
-                        </div>
-                    </div>
-                </div>
-    
+<body>
+    <!-- started here navbar -->
+
+    <header>
+        <nav>
+            <div class="top-navbar">
                 <div>
-                    <ul class="nav-list">
-                        <li><a href="">world news</a></li>
-                        <li><a href="">Sports</a></li>
-                        <li><a href="./../tech/tech.html">Tech</a></li>
-                        <li><a href="">Entertainment</a></li>
-                        <li><a href="">Business</a></li>
-                        <li><a href="">Culture</a></li>
-                        <li><a href="">Education</a></li>
+                    <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                </div>
+                <div>
+                    <ul class="top-nav-list">
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="">Contact</a></li>|
+                        <li><a href="">Login</a></li>
                     </ul>
                 </div>
-            </nav>
-        </header>
+                <div>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                    <div class="top-nav-search-bar">
+                        <input type="text" placeholder="Search news" />
+                        <img src="./../../images/magnifying-glass.png" />
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="education.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>Manav Rachna: A global center for knowledge, innovation , research </h1>
+    </div>
+    <div class="d-t">
+        Date : Fri , Aug 16
+    </div>
+    <br>
+    <div class="img_container">
+        <img src="./../../images/card6img.avif" alt="ra" class="front_img" />
+        <div class="information_block">
+            Manav Rachna prepares students to make ground-breaking contributions with new-age skills for the world of
+            tomorrow. The dedicated Manav Rachna Career Development Centre is an in-house corporate-style training
+            centre where students are trained with soft and hard skills for the industry. The Centre uses specialized
+            methods to help students to overcome obstacles that come their way, by thinking out of the box.
+
+            More than 600 recruitment partners are listed with Manav Rachna including KPMG, TCS, Clove, Yamaha,
+            Cognizant, Damco Solutions, Quovantis Technologies, Koyo Electronics, Maven Wave, Lido Learning, Crowe
+            Horwath, Indigo, IBI Group, Expert Lancing, TCS, Shivalik Power, Entab Infotech, Befikr.in, Jaro Education,
+            Bharti Airtel, IDFC Bank, iAugmentor, Eigo Paathshala, IBM, Amazon, LinkedIn, Qi Spine, Sonalika Tractor,
+            Polymedicure, Sanmar Engineering, Tata Steel, Aroma Engineering, Optum (UHG), Zomato, Ortho Cure, and Aktiv
+            Health are some of the companies that have offered lucrative packages to the 2022 batch of engineering and
+            non-engineering students. It is quite noteworthy that more than 1000 students 2023 Batch have bagged their
+            dream job with blue chip companies. Students of 2025 Batch of Hospitality and Hotel Management have already
+            been placed for their internship with 5 Star hotels.
+            The Highest package bagged by a Manav Rachna student is 54 Lakhs CTC which itself defines the augmenting
+            culture that places students at the centre.
+
+            Be it the international scholarships, research grants, the high pay packages, or the stupendous community
+            service they do, MRites excel everywhere.
+
+            At Manav Rachna, a student is distilled, refined and completely transformed in a holistic environment that
+            promotes both didactic and autodidactic learning and development.
+
+
+
+        </div>
+    </div>
+    
 </body>
+
 </html>
