--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -122,7 +122,7 @@
                             <div class="homepage-Card">
                                 <h3>Manav Rachna: A global center for knowledge, innovation , research </h3>
                                 <p>A vibrant, forward-thinking and innovative institution, Manav Rachna has been inculcating the best of values in students </p>
-                                <a href="">Read more</a>
+                                <a href="card6.html">Read more</a>
                             </div>
                         </div>
                     </div>
