broken img fixed

--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
-                        <img src="../images/magnifying-glass.png" />
+                        <img src="../../images/magnifying-glass.png" />
                     </div>
                 </div>
             </div>
