--- a/pages/Entertainment/entertainment.html
+++ b/pages/Entertainment/entertainment.html
@@ -171,17 +171,17 @@
                 <div class="sidebar-section">
                     <h2>Music News</h2>
                     <div>
-                        <a href="./Pages/page7.html"style="text-decoration:none;">Watch Adele Perform in the Pouring Rain in Munich</a>
+                        <a href="./../Entertainment/ent-pages/page7.html"style="text-decoration:none;">Watch Adele Perform in the Pouring Rain in Munich</a>
                         <hr>
-                        <a href="./Pages/page8.html"style="text-decoration:none;">BTS' Jungkook reveals teaser poster for documentary 'JUNGKOOK: I AM STILL'</a>
+                        <a href="./../Entertainment/ent-pages/page8.html"style="text-decoration:none;">BTS' Jungkook reveals teaser poster for documentary 'JUNGKOOK: I AM STILL'</a>
                         <hr>
-                        <a href="./Pages/page9.html"style="text-decoration:none;">Pocket FM’s global expansion faces a speed bump.</a>
+                        <a href="./../Entertainment/ent-pages/page9.html"style="text-decoration:none;">Pocket FM’s global expansion faces a speed bump.</a>
                         <hr>
-                        <a href="./Pages/page10.html"style="text-decoration:none;">Lady Gaga & Bruno Mars Team Up on New Song ‘Die With a Smile’: Stream It Now</a>
+                        <a href="./../Entertainment/ent-pages/page10.html"style="text-decoration:none;">Lady Gaga & Bruno Mars Team Up on New Song ‘Die With a Smile’: Stream It Now</a>
                         <hr>
-                        <a href="./Pages/page11.html"style="text-decoration:none;">Kavinsky’s ‘Nightcall’ Sees Streaming Surge After 2024 Olympics Closing Ceremony Performance</a>
+                        <a href="./../Entertainment/ent-pages/page11.html"style="text-decoration:none;">Kavinsky’s ‘Nightcall’ Sees Streaming Surge After 2024 Olympics Closing Ceremony Performance</a>
                         <hr>
-                        <a href="./Pages/page12.html"style="text-decoration:none;">AR Rahman bags 7th National Award for music, the most by any music director</a>
+                        <a href="./../Entertainment/ent-pages/page12.html"style="text-decoration:none;">AR Rahman bags 7th National Award for music, the most by any music director</a>
                         <hr>
                         <br>
                     </div>
@@ -264,6 +264,7 @@
             <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
         </div>
     </footer>
+ <!-- footer has been ended here -->
 
     
 </body>
