--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../../CSS/culture/cultural_News.css">
+    <link rel="stylesheet" href="./../../CSS/HomeStyles.css">
     <title>Document</title>
 </head>
 
@@ -63,7 +63,7 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="./../../images/cultural1.webp" alt="">
+                        <img src="./../../images/culture1.webp" alt="">
                         <div class="homepage-Card">
                             <h3>Tarun Tahiliani defends Olympic uniforms criticism.</h3>
                             <p>Fashion designer Tarun Tahiliani has firmly defended the design of the Indian contingent's uniforms for the 2024 Paris Olympics, following widespread criticism. Despite social media backlash labelling the outfits as an "eyesore" and "mediocre," </p>
