--- a/pages/Business/business_news_1.html
+++ b/pages/Business/business_news_1.html
@@ -63,7 +63,10 @@
         <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1>Adani now allowed to sell Bangladesh-bound power in India</h1>
     </div>
-
+    <div class="d-t">
+        Date : Fri , Aug 16
+    </div>
+    <br>
     <div class="img_container">
         <img src="./../../images/adani_company.jpg" alt="Adani Business" class="front_img" />
         <div class="information_block">
