--- a/pages/Business/business_news_3.html
+++ b/pages/Business/business_news_3.html
@@ -65,7 +65,9 @@
             <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
             <h1>Wholesale price inflation drops to 2.04% in July</h1>
         </div>
-
+        <div class="d-t">
+            Date : Fri , Aug 16
+        </div>
         <div class="img_container">
             <img src="./../../images/economic_business.jpg" alt="economic_business" class="front_img" />
             <div class="information_block">
