--- a/pages/Business/business_news_2.html
+++ b/pages/Business/business_news_2.html
@@ -65,7 +65,9 @@
             <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
             <h1>Sensex snaps two-day losing streak on rebound in IT shares</h1>
         </div>
-
+        <div class="d-t">
+            Date : Fri , Aug 16
+        </div>
         <div class="img_container">
             <img src="./../../images/market_business.jpg" alt="Adani Business" class="front_img" />
             <div class="information_block">
