--- a/pages/Business/business_news_5.html
+++ b/pages/Business/business_news_5.html
@@ -65,7 +65,9 @@
             <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
             <h1>VST ropes in Axis Bank to offer loan to farmers</h1>
         </div>
-
+        <div class="d-t">
+            Date : Fri , Aug 16
+        </div>
         <div class="img_container">
             <img src="./../../images/agriculture_business.jpeg" alt="agriculture_business" class="front_img" />
             <div class="information_block">
