--- a/pages/Business/business_news_6.html
+++ b/pages/Business/business_news_6.html
@@ -65,7 +65,9 @@
             <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
             <h1>Rupee rises 7 paise against US dollar in early trade</h1>
         </div>
-
+        <div class="d-t">
+            Date : Fri , Aug 16
+        </div>
         <div class="img_container">
             <img src="./../../images/money_business_2.jpg" alt="money_business" class="front_img" />
             <div class="information_block">
