--- a/pages/Entertainment/entertainment.html
+++ b/pages/Entertainment/entertainment.html
@@ -67,12 +67,12 @@
                 <div class="cards">
                     <div class="card">
                         <img src="https://media.cnn.com/api/v1/images/stellar/prod/gettyimages-2160789265.jpg?c=16x9&q=h_653,w_1160,c_fill/f_webp"
-                            alt="">
+                            alt="Taylor Swift">
                         <div class="page-Card">
                             <h3>Taylor Swift set to return to the stage in London following thwarted terror attack plot in Vienna</h3>
                             <p>
                                 Taylor Swift will return to the stage at London’s Wembley Stadium on Thursday, just over a week after three of her Eras Tour concerts in Vienna were canceled when police in the Austrian city thwarted a terror attack plot targeting one of her shows.</p>
-                            <a href="">Read more</a>
+                            <a href="./../Entertainment/ent-pages/page1.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
@@ -83,7 +83,7 @@
                             <p>Multiple arrests have been made in connection with Matthew Perry’s death, according to a law enforcement source familiar with the situation.
 
                                 Charges will be announced Thursday morning at a press conference in Los Angeles, along with details of Perry’s actions, the source said.</p>
-                            <a href="">Read more</a>
+                            <a href="./../Entertainment/ent-pages/page2.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
@@ -93,7 +93,7 @@
                             <h3>Deadpool And Wolverine Box Office Collection Day 20: Marvel Film Earns Rs 130.40 Crore, To Clash With Major New Releases.</h3>
                             <p>Deadpool And Wolverine Box Office Collection Day 20: Ryan Reynolds and Hugh Jackman's return as Marvel's two superheroes has turned out to be a profitable decisio. The movie continues to make huge money even in its third week. But, with major releases on Independence Day weekend, will it survive the
                                 race?</p>
-                            <a href="">Read more</a>
+                            <a href="./../Entertainment/ent-pages/page3.html">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                             <div class="page-Card">
                                 <h3>Stree 2 Twitter reviews: Rajkummar Rao, Shraddha Kapoor film called ‘blockbuster’; people love 'that' cameo</h3>
                                 <p>Stree 2 released along with Vedaa, Khel Khel Mein, Thangalaan, Double iSmart and Mr Bachchan. It is the sequel to the 2018 film Stree. SPOILERS ahead.</p>
-                                <a href="">Read more</a>
+                                <a href="./../Entertainment/ent-pages/page4.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
@@ -122,7 +122,7 @@
                             <div class="page-Card">
                                 <h3>Vedaa review: John Abraham and Sharvari’s thriller on caste system gets you thinking, delivers a hard-hitting message</h3>
                                 <p>Vedaa review: John Abraham brings action and muscles to the story of an abused, oppressed woman, played by Sharvari.</p>
-                                <a href="">Read more</a>
+                                <a href="./../Entertainment/ent-pages/page5.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
@@ -131,7 +131,7 @@
                             <div class="page-Card">
                                 <h3>Kartik Aaryan, Karan Johar, Nota Fatehi kick off 15th Indian Film Festival of Melbourne</h3>
                                 <p>Bollywood stars and celebrities such as Kartik Aaryan, Karan Johar and other were present for the 15th edition of ndian Film Festival of Melbourne.</p>
-                                <a href="">Read more</a>
+                                <a href="./../Entertainment/ent-pages/page6.html">Read more</a>
                             </div>
                         </div>
                     </div>
