colour new added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,19 +62,19 @@
 
     <div class="container ">
         <div class="card ">
-            <img src="./../location.png " class="img ">
+            <img src="./../images/location.png " class="img ">
             <h1 class="heading ">address</h1>
             <p class="paragraph ">198 west 21th street, suite 721 new york NY 10016</p>
         </div>
         <div class="card ">
-            <img src="./../phone.png " class="img ">
+            <img src="./../images/phone.png " class="img ">
             <h1 class="heading ">phone</h1>
             <p class="paragraph ">
                 +1234 7865 00
             </p>
         </div>
         <div class="card ">
-            <img src="./../email.png " class="img ">
+            <img src="./../images/email.png " class="img ">
             <h1 class="heading ">Email</h1>
             <p class="paragraph ">info@gamil.com</p>
         </div>
