--- a/pages/sport/football.html
+++ b/pages/sport/football.html
@@ -69,7 +69,7 @@
 </p>
     <img src="../../images/football_news"style="height:400px;margin:20px">
     <br>
- <span style="font-size:12px;text-align: center;">India captain Rohit Sharma at the end of the third ODI against Sri Lanka in Colombo.</span>
+ <span style="font-size:12px;text-align: center;"></span>
  <br>
 <p>India emerged victorious in the SAFF Championship by defeating Kuwait in a thrilling penalty shoot-out.
      The match was evenly contested, ending with a 1-1 draw at the conclusion of regular play, leading to a penalty shoot-out. 
